<resources>
    <string name="app_name">SpotFinder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="places">Lugares</string>
    <string name="profile">Perfil</string>
    <string name="settings">Configuración</string>
    <string name="title_change_password">Cambiar contraseña</string>
    <string name="txt_change_password">Cambia tu contraseña</string>
    <string name="title_change_name">Cambiar nombre</string>
    <string name="txt_change_name">Actualiza tu nombre usuario</string>
    <string name="title_change_phone">Cambiar teléfono</string>
    <string name="txt_change_phone">Cambia tú número de teléfono</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="txt_notifications">Activa las notificaciones</string>
    <string name="title_dark_mode">Modo oscuro</string>
    <string name="txt_dark_mode">Activa el modo oscuro para un cambio visual</string>
    <string name="title_logout">Cerrar sesión</string>
    <string name="txt_logout">Cierra tu sesión</string>
    <string name="title_user">Usuario:</string>
    <string name="category">Tipo de establecimiento:</string>
    <string name="category_all">General</string>
    <string name="park_chip">Parque</string>
    <string name="live_music_chip">Música en vivo</string>
    <string name="sports_bar_chip">Sport bar</string>
    <string name="nightclub_chip">Nightclub</string>
    <string name="cafe_chip">Café</string>
    <string name="bar_chip">Bar</string>
    <string name="restaurant_chip">Restaurante</string>
    <string name="txt_apply">Aplicar</string>
    <string name="other_chip">Otro</string>
    <string name="no_comments">Sin comentarios</string>
    <string name="title_register">Registrarse</string>
    <string name="title_log_in">Ingresar</string>
    <string name="place_holder_password">Contraseña</string>
    <string name="place_holder_phone">Telefono</string>
    <string name="dialog_title">Error de datos</string>
    <string name="dialog_title_user">Mensaje</string>
    <string name="dialog_body">Los datos ingresados son incorrectos</string>
    <string name="ok">Aceptar</string>
    <string name="error_message">El usuario no existe o las credenciales son incorrectas</string>
    <string name="place_holder_name">Tu nombre</string>
    <string name="title_name">Nombre</string>
    <string name="title_telefono">Télefono</string>
    <string name="title_password">Contraseña</string>
    <string name="title_avatar">Selecciona tu avatar</string>
    <string name="telefono">Telefono</string>
    <string name="contrase_a">Contraseña</string>
    <string name="title_place_description">Descripción:</string>

</resources>